k8s/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          # 여러분의 mariadb image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_e0bd9f9a3a51
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
              subPath: mysql
            - mountPath: /docker-entrypoint-initdb.d
              name: init-db
          resources:
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 3306
      volumes:
        - name: init-db
          configMap:
            name: init-db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  type: ClusterIP
  clusterIP: None # Headless
  selector:
    app: mariadb
  ports:
    - port: 3306
